# gs_interfaces

./: CMakeLists.txt  README.md  package.xml
msg/: OptVelocity.msg  Orientation.msg  Parameter.msg  PointGPS.msg  SatellitesGPS.msg  SimpleBatteryState.msg
srv/: Cargo.srv  Event.srv  NavigationSystem.srv  ParametersList.srv  SetNavigationSystem.srv  SetParametersList.srv  Wait.srv
